[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["YahyaOmari <yahya.omari@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Django = "^3.2.4"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
